--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <a href="nagykep.html">Nagy kép</a>
     </div>
     <div class="kepek">
-      <img src="kepek/300/_DSC6696_300.jpg" alt="">
-      <img src="kepek/300/_DSC8090_300.jpg" alt="">
-      <img src="kepek/300/_DSC8235_300.jpg" alt="">
-      <img src="kepek/300/_DSC9920_300.jpg" alt="">
-      <img src="kepek/300/_MG_1121_1_300.jpg" alt="">
-      <img src="kepek/300/_MG_1357_300.jpg" alt="">
-      <img src="kepek/300/_MG_1420_2_300.jpg" alt="">
-      <img src="kepek/300/_MG_2995_300.jpg" alt="">
+      <img src="kepek/300/DSC6696_300.jpg" alt="">
+      <img src="kepek/300/DSC8090_300.jpg" alt="">
+      <img src="kepek/300/DSC8235_300.jpg" alt="">
+      <img src="kepek/300/DSC9920_300.jpg" alt="">
+      <img src="kepek/300/MG_1121_1_300.jpg" alt="">
+      <img src="kepek/300/MG_1357_300.jpg" alt="">
+      <img src="kepek/300/MG_1420_2_300.jpg" alt="">
+      <img src="kepek/300/MG_2995_300.jpg" alt="">
     </div>
   </body>
 </html>
